fix: fixing the host page on mobile dark theme, adding a play button on the episode page

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -120,3 +120,7 @@
     flex-direction: column;
   }
 }
+
+.wp-block-image.size-large figure img{
+  border-radius: 2rem;
+}
